# amorphous-vr

./: .gitignore  build.sh
android/: local.properties  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: synty_crate.msh  vrplayground.msh
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/java/space/nyanko/amorphousvr/: MainActivity.java
android/app/src/main/jni/: MyGvrApp.cpp  MyGvrApp.hpp  treasure_hunt_jni.cc  treasure_hunt_renderer.cc  treasure_hunt_renderer.h
